# Connect-Four

./: .gitattributes  .gitignore  LICENSE  README.md
Connect-Four/: Cargo.toml
connect- four/: Cargo.toml
connect-four/: Cargo.toml
connect-four-backend/: Cargo.toml
connect-four-backend/public/: ScoreBoard.html  connect-four-frontend 2.wasm  connect-four-frontend 3.wasm  connect-four-frontend 4.wasm  connect-four-frontend 5.js  connect-four-frontend 5.wasm  connect-four-frontend 6.js  connect-four-frontend.js  connect-four-frontend.wasm  humanPlayer.html  index.html
connect-four-backend/src/: game.rs  game_repository.rs  main.rs  mongo_connection.rs
connect-four-cli/: Cargo.toml
connect-four-cli/src/: connect_four.rs  lib.rs  main.rs  toot_otto.rs
connect-four-frontend/: Cargo.toml  build.sh
connect-four-frontend-old/: Cargo.toml  build.sh
connect-four-frontend-old/src/: connect_4_human.rs  main.rs
connect-four-frontend/src/: all.rs  connect_4_app.rs  connect_4_computer.rs  connect_4_human.rs  how_to_connect_4.rs  how_to_toot.rs  main.rs  score_board_ctrl.rs  scoreboard.rs  scores.rs  toot_otto_computer.rs  toot_otto_human.rs  welcome.rs
connect-four/public/: Scores.html  angular-shim.js  connect-four-frontend.js  connect-four-frontend.wasm  index.html  main1.html
connect-four/public/javascripts/: Connect4App.js  ScoreBoardCtrl.js
connect-four/public/webassembly/: connect-four-frontend.js  connect-four-frontend.wasm
connect-four/src/: game.rs  game_repository.rs  main.rs  mongo_connection.rs
