[package]
name = "connect-four-frontend"
version = "0.1.0"
authors = ["Dinula De Silva", "Kai Bailey", "Hai Yang Xu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stdweb = "0.4.20"
yew = {version="0.14.0", features = ["std_web"]}
yew-router = {version="0.11.0", features = ["std_web"]}
web_logger = "0.2"
log = "0.4.8"
wee_alloc = "0.4.5"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
connect_four_cli = { path = "../connect-four-cli" }
wasm-timer = "0.2.0"
