[package]
name = "connect-four"
version = "0.1.0"
authors = ["Dinula De Silva", "Kai Bailey", "Hai Yang Xu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
rocket_codegen = "0.4.4"
mongodb = "0.3.11"
r2d2 = "0.8.3"
r2d2-mongodb = "0.2.2"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

[dependencies.rocket_contrib]
default-features = false
features = ["json", "serve"]
version = "0.4.4"
